--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,8 @@ body,
 :root{
     height: 100%
 }
+.embedded-checkout-container {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+  }
